# Siretizator_Lite

./: .gitignore  README.md  pyproject.toml  pytest.ini  render.yaml  requirements.txt
.github/workflows/: ci.yml  deploy.yml  lint.yml  update_sirene.yml
airflow-docker/: docker-compose.yml  requirements.txt
airflow-docker/dags/: downloadSirene.py  updateSirene.py
app/: main.py  matching.py  preprocessing.py
data/utils/: CatJuridique.csv  Libelle.csv  hexaposte.csv  names.csv
src/: preprocessing.py  siretization.py
src/siretizator/: creationSirene.py  preprocessing.py  siretization.py
templates/: index.html
tests/: test_preprocessing.py  test_siretization.py
tests/integration/: test_siretization_HF.py
tests/unit/: test_preprocessing.py  test_siretization.py
